Update styles, HTML files and add images

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container py-5">
             <div class="row align-items-center flex-md-row-reverse">
                 <div class="col-lg-6 text-center mb-4 mb-lg-0">
-                    <img src="https://placehold.co/600x400/10b981/ffffff?text=KicksLog+Hero" class="img-fluid rounded-4 shadow-lg hero-image" alt="スニーカーイラスト">
+                    <img src="img/AirJordan1.png" class="img-fluid rounded-4 shadow-lg hero-image" alt="スニーカーイラスト">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-3 fw-bold mb-4 text-brown">
@@ -80,7 +80,7 @@
                     <div class="carousel-item active">
                         <div class="d-flex justify-content-center">
                             <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden w-75">
-                                <img src="https://placehold.co/800x400/e5e7eb/a3a3a3?text=Air+Jordan+1" class="card-img-top" alt="Air Jordan 1">
+                                <img src="img/AirJordan1.png" class="card-img-top" alt="Air Jordan 1">
                                 <div class="card-body text-center p-4">
                                     <span class="badge bg-secondary mb-2">NIKE</span>
                                     <h4 class="card-title fw-bold mb-2">Air Jordan 1 High</h4>
@@ -97,7 +97,7 @@
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
                              <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden w-75">
-                                <img src="https://placehold.co/800x400/fb923c/ffffff?text=Samba+OG" class="card-img-top" alt="Adidas Samba">
+                                <img src="img/SambaOG.png" class="card-img-top" alt="Adidas Samba">
                                 <div class="card-body text-center p-4">
                                     <span class="badge bg-warning text-dark mb-2">ADIDAS</span>
                                     <h4 class="card-title fw-bold mb-2">Adidas Samba OG</h4>
@@ -114,7 +114,7 @@
                     <div class="carousel-item">
                          <div class="d-flex justify-content-center">
                             <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden w-75">
-                                <img src="https://placehold.co/800x400/06b6d4/ffffff?text=NB+990v6" class="card-img-top" alt="New Balance 990v6">
+                                <img src="img/990v6.png" class="card-img-top" alt="New Balance 990v6">
                                 <div class="card-body text-center p-4">
                                     <span class="badge bg-info text-dark mb-2">New Balance</span>
                                     <h4 class="card-title fw-bold mb-2">New Balance 990v6</h4>
