--- a/sneaker-list.html
+++ b/sneaker-list.html
@@ -175,7 +175,7 @@
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden">
-                            <img src="https://placehold.co/300x200/10b981/ffffff?text=Air+Jordan+1" class="card-img-top" alt="AJ1">
+                            <img src="img/AirJordan1.png" class="card-img-top" alt="AJ1">
                             <div class="card-body p-4">
                                 <span class="badge bg-secondary mb-2">NIKE</span>
                                 <h5 class="card-title fw-bold mb-2">Air Jordan 1 High</h5>
@@ -199,7 +199,7 @@
 
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden">
-                            <img src="https://placehold.co/300x200/f59e0b/ffffff?text=Samba+OG" class="card-img-top" alt="Samba">
+                            <img src="img/SambaOG.png" class="card-img-top" alt="Samba">
                             <div class="card-body p-4">
                                 <span class="badge bg-warning text-dark mb-2">ADIDAS</span>
                                 <h5 class="card-title fw-bold mb-2">Samba OG</h5>
@@ -223,7 +223,7 @@
 
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden">
-                            <img src="https://placehold.co/300x200/fb923c/ffffff?text=990v6" class="card-img-top" alt="990v6">
+                            <img src="img/990v6.png" class="card-img-top" alt="990v6">
                             <div class="card-body p-4">
                                 <span class="badge bg-info text-dark mb-2">New Balance</span>
                                 <h5 class="card-title fw-bold mb-2">990v6</h5>
@@ -247,7 +247,7 @@
                     
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden">
-                            <img src="https://placehold.co/300x200/ec4899/ffffff?text=Air+Max+95" class="card-img-top" alt="Air Max 95">
+                            <img src="img/Air Max 95.png" class="card-img-top" alt="Air Max 95">
                             <div class="card-body p-4">
                                 <span class="badge bg-secondary mb-2">NIKE</span>
                                 <h5 class="card-title fw-bold mb-2">Air Max 95</h5>
@@ -271,7 +271,7 @@
 
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden">
-                            <img src="https://placehold.co/300x200/8b5cf6/ffffff?text=Superstar" class="card-img-top" alt="Superstar">
+                            <img src="img/Superstar.png" class="card-img-top" alt="Superstar">
                             <div class="card-body p-4">
                                 <span class="badge bg-warning text-dark mb-2">ADIDAS</span>
                                 <h5 class="card-title fw-bold mb-2">Superstar</h5>
@@ -295,7 +295,7 @@
 
                     <div class="col-md-6 col-lg-3">
                         <div class="card h-100 border-0 shadow-sm rounded-4 overflow-hidden">
-                            <img src="https://placehold.co/300x200/06b6d4/ffffff?text=Old+Skool" class="card-img-top" alt="Old Skool">
+                            <img src="img/Old Skool.png" class="card-img-top" alt="Old Skool">
                             <div class="card-body p-4">
                                 <span class="badge bg-primary mb-2">VANS</span>
                                 <h5 class="card-title fw-bold mb-2">Old Skool</h5>
